--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Flask==0.12.2
 Flask-Bcrypt==0.7.1
 Flask-Login==0.4.0
+Flask-Mail==0.9.1
 Flask-Migrate==2.0.3
 Flask-SQLAlchemy==2.2
 Flask-Script==2.0.5
+Flask-User==0.6.19
 Flask-WTF==0.14.2
 Jinja2==2.9.6
 Mako==1.0.6
@@ -13,12 +15,22 @@ WTForms==2.1
 Werkzeug==0.12.2
 alembic==0.9.1
 bcrypt==3.1.3
+blinker==1.4
+certifi==2017.4.17
 cffi==1.10.0
+chardet==3.0.4
 click==6.7
+foursquare==2015.02.02
+idna==2.5
 itsdangerous==0.24
+passlib==1.7.1
 psycopg2==2.7.1
 pycparser==2.18
+pycryptodome==3.4.7
 python-editor==1.0.3
+rauth==0.7.3
+requests==2.18.1
 six==1.10.0
 slugify==0.0.1
+urllib3==1.21.1
 wsgiref==0.1.2
